[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/QMenuButton.gd" type="Script" id=1]
[ext_resource path="res://sprites/`missingtexture.png" type="Texture" id=2]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="QmenuButton" type="TextureButton"]
margin_top = -1.0
margin_right = 77.0
margin_bottom = 76.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 1 )

[node name="background2" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 77.0
margin_bottom = 77.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.192157 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -5.0
margin_top = 37.0
margin_right = 83.0
margin_bottom = 78.0
custom_colors/font_color = Color( 1, 1, 1, 0.533333 )
custom_fonts/font = SubResource( 1 )
text = "unknown"
align = 1
valign = 1

[connection signal="button_up" from="." to="." method="_on_QmenuButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_QmenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_QmenuButton_mouse_exited"]
